--- a/css/style.css
+++ b/css/style.css
@@ -1,137 +1,6 @@
-* {
-  font-family: Poppins, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-ul {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-}
-:root {
-  /* Variáveis de Cores Neutras */
-  --c12: #000000;
-  --c11: #111111;
-  --c10: #2e2e2e;
-  --c9: #404040;
-  --c8: #595959;
-  --c7: #717171;
-  --c6: #9c9c9c;
-  --c5: #b2b2b2;
-  --c4: #cccccc;
-  --c3: #dedede;
-  --c2: #ededed;
-  --c1: #f7f7f7;
-  --w: #ffffff;
+@import "./global/global.css";
+@import "./global/header.css";
+@import "./home/introducao.css";
 
-  /* Variáveis de Cores */
-  --p5: #332200;
-  --p4: #664400;
-  --p3: #a66f00;
-  --p2: #e4a30b;
-  --p4: #ffbb00;
-
-  /* Variáveis de Padding */
-  --p-xsm: 0.25rem;
-  --p-sm: 0.5rem;
-  --p-md: 0.75rem;
-  --p-lg: 1rem;
-  --p-xl: 1.25rem;
-
-  /* Variáveis de Margin */
-  --m-xsm: 0.25rem;
-  --m-sm: 0.5rem;
-  --m-md: 1rem;
-  --m-lg: 0.25rem;
-  --m-xl: 2rem;
-  --m-xxl: 2.5rem;
-
-  /* Variáveis de gap */
-  --gap-xsm: 0.25rem;
-  --gap-sm: 0.5rem;
-  --gap-md: 1rem;
-  --gap-lg: 1.25rem;
-  --gap-xl: 2rem;
-  --gap-xxl: 4rem;
-
-  /* Variáveis de corpo de texto */
-  --text-xsm: 0.75rem;
-  --text-sm: 1rem;
-  --text-md: 1.25rem;
-  --text-lg: 1.5rem;
-}
-.header-bg {
-  background-color: var(--c12);
-  width: 100vw;
-}
-.header {
-  box-sizing: border-box;
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--gap-md);
-  justify-content: space-between;
-  align-items: center;
-  padding: var(--p-lg);
-}
-.header-menu {
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--gap-md);
-}
-
-.header-menu a {
-  display: inline-block;
-  text-transform: capitalize;
-  color: var(--c1);
-  font-size: var(--text-sm);
-  padding: var(--p-sm) var(--p-md);
-  letter-spacing: 0.06rem;
-  font-weight: 400;
-  position: relative;
-}
-.header-menu a::after {
-  content: "";
-  display: block;
-  height: 2px;
-  width: 0;
-  background: var(--c1);
-  margin-top: var(--m-xsm);
-  transition: 0.3s;
-  position: absolute;
-  left: 0;
-}
-.header-menu a:hover::after {
-  width: 100%;
-}
-/* MEDIA QUERIES */
-@media (max-width: 800px) {
-  .header-menu {
-    gap: var(--gap-md);
-  }
-  .header-menu a {
-    background-color: var(--c11);
-    padding: var(--p-sm) var(--p-md);
-    border-radius: 4px;
-  }
-  .header-menu a:hover {
-    background: var(--c10);
-  }
-  .header-menu a::after {
-    display: none;
-  }
-}
-
-@media (max-width: 600px) {
-  .header-menu {
-    gap: var(--gap-sm);
-  }
-  .header-menu a {
-    background-color: var(--c11);
-    font-size: var(--text-xsm);
-    padding: var(--p-sm) var(--p-md);
-    border-radius: 4px;
-  }
-}
+/* Utilidades */
+@import "./utilidades/componentes.css";
