--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -18,18 +18,10 @@
   align-self: end;
   padding-bottom: 200px;
 }
-.introducao h1 {
-  font-family: "Poppins";
-  font-weight: 600;
-  font-size: var(--h1);
-  line-height: 1.125;
+.introducao .texto-grande {
   margin-bottom: var(--m-xl);
 }
-.introducao p {
-  font-family: "Roboto";
-  font-weight: 400;
-  font-size: var(--p-xl);
-  line-height: 1.5;
+.introducao .texto-pequeno {
   color: var(--c5);
   margin-bottom: var(--m-xl);
 }
@@ -58,14 +50,14 @@
   .introducao-bg {
     background-color: var(--c11);
   }
-  .introducao h1 {
+  .introducao .texto-grande {
     font-size: var(--h3);
     margin-bottom: var(--m-lg);
   }
   .introducao-conteudo {
     padding-bottom: 0;
   }
-  .introducao p {
+  .introducao .texto-pequeno {
     font-size: var(--p-lg);
     margin-bottom: var(--m-lg);
   }
@@ -76,7 +68,7 @@
 }
 
 @media (max-width: 600px) {
-  .introducao h1 {
+  .introducao .texto-grande {
     font-size: var(--h5);
   }
 }
