Criação da folha de tipografia e ajuste de CSS utilitário

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,7 @@
 /* Utilidades */
 @import "./utilidades/componentes.css";
 @import "./utilidades/tipografia.css";
+@import "./utilidades/cores.css";
+
+/* Páginas */
+@import "./bibicletas/bicicletas-lista.css";
