--- a/css/global/header.css
+++ b/css/global/header.css
@@ -22,12 +22,7 @@
 .header-menu a {
   display: inline-block;
   text-transform: capitalize;
-  color: var(--c1);
-  font-size: var(--text-sm);
   padding: var(--p-sm) var(--p-md);
-  letter-spacing: 0.06rem;
-  font-family: Poppins;
-  font-weight: 400;
   position: relative;
 }
 .header-menu a::after {
@@ -67,7 +62,7 @@
   }
   .header-menu a {
     background-color: var(--c11);
-    font-size: var(--text-xsm);
+    font-size: 0.75rem;
     padding: var(--p-sm) var(--p-md);
     border-radius: 4px;
   }
