--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -3,7 +3,7 @@
   width: 100%;
   color: var(--w);
   /* criar uma ilusão de que a imagem está passando para fora do container */
-  box-shadow: inset 0 -80px white;
+  box-shadow: inset 0 -80px var(--w);
 }
 .introducao {
   display: grid;
@@ -18,15 +18,11 @@
   align-self: end;
   padding-bottom: 200px;
 }
-.introducao .texto-grande {
+.font-1-xxl {
   margin-bottom: var(--m-xl);
 }
-.introducao .texto-pequeno {
-  color: var(--c5);
+.font-2-l {
   margin-bottom: var(--m-xl);
-}
-.introducao span {
-  color: var(--p2);
 }
 
 .introducao img {
@@ -37,11 +33,7 @@
   border-radius: 4px;
 }
 /* MEDIA QUERIES ---------------------------------------------------------------- */
-@media (max-width: 1000px) {
-  .introducao h1 {
-    font-size: var(--h2);
-  }
-}
+
 @media (max-width: 800px) {
   .introducao {
     grid-template-columns: 1fr;
@@ -50,25 +42,18 @@
   .introducao-bg {
     background-color: var(--c11);
   }
-  .introducao .texto-grande {
-    font-size: var(--h3);
+  .font-1-xxl {
     margin-bottom: var(--m-lg);
   }
   .introducao-conteudo {
     padding-bottom: 0;
+    max-width: 60ch;
   }
-  .introducao .texto-pequeno {
-    font-size: var(--p-lg);
+  .font-2-l {
     margin-bottom: var(--m-lg);
   }
   .introducao img {
     width: 100%;
     height: 300px;
-  }
-}
-
-@media (max-width: 600px) {
-  .introducao .texto-grande {
-    font-size: var(--h5);
   }
 }
