--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,20 +1,16 @@
-.introducao-bg {
+.intro-bg {
   background-color: var(--c12);
   width: 100%;
   color: var(--w);
   /* criar uma ilusão de que a imagem está passando para fora do container */
   box-shadow: inset 0 -80px var(--w);
 }
-.introducao {
+.intro {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0 var(--gap-xxl);
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding: 0 var(--p-xxl);
-  margin: 0 auto;
 }
-.introducao-conteudo {
+.intro-conteudo {
   align-self: end;
   padding-bottom: 200px;
 }
@@ -25,7 +21,7 @@
   margin-bottom: var(--m-xl);
 }
 
-.introducao img {
+.intro img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -35,25 +31,26 @@
 /* MEDIA QUERIES ---------------------------------------------------------------- */
 
 @media (max-width: 800px) {
-  .introducao {
+  .intro {
     grid-template-columns: 1fr;
     padding: var(--p-xxl);
   }
-  .introducao-bg {
+  .intro-bg {
     background-color: var(--c11);
   }
   .font-1-xxl {
     margin-bottom: var(--m-lg);
   }
-  .introducao-conteudo {
+  .intro-conteudo {
     padding-bottom: 0;
     max-width: 60ch;
   }
   .font-2-l {
     margin-bottom: var(--m-lg);
   }
-  .introducao img {
+  .intro img {
     width: 100%;
     height: 300px;
+    object-fit: cover;
   }
 }
