--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 @import "./global/global.css";
 @import "./global/header.css";
+
+/* Home */
 @import "./home/introducao.css";
+@import "./home/tecnologia.css";
+@import "./home/parceiros.css";
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
@@ -8,4 +12,4 @@
 @import "./utilidades/cores.css";
 
 /* Páginas */
-@import "./bibicletas/bicicletas-lista.css";
+@import "./bicicletas/bicicletas-lista.css";
