--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,3 +1,11 @@
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-right: var(--p-xxl);
+  padding-left: var(--p-xxl);
+  margin-left: auto;
+  margin-right: auto;
+}
 .botao {
   display: inline-block;
   padding: 1rem 2rem;
@@ -11,10 +19,31 @@
 .botao:hover {
   background: var(--gradientPrimarioHover);
 }
+.link {
+  display: inline-block;
+  color: var(--p1);
+  font: 500 1.125rem/1.35 "Poppins", sans-serif;
+  text-transform: uppercase;
+  margin-bottom: var(--m-xxl);
+}
+.link::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  margin-top: var(--m-xsm);
+  background-color: currentColor;
+}
+.link:hover {
+  color: var(--w);
+}
 @media (max-width: 800px) {
   .botao {
     font-size: 1rem;
     padding: var(--p-sm) var(--p-lg);
+  }
+  .link {
+    margin-bottom: var(--m-xl);
   }
 }
 
