--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 @import "./home/introducao.css";
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
+@import "./home/depoimento.css";
+@import "./home/seguros.css";
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
