--- a/css/utilidades/tipografia.css
+++ b/css/utilidades/tipografia.css
@@ -58,6 +58,9 @@
   .font-2-xl {
     font-size: 1.5rem;
   }
+  .font-2-m {
+    font-size: 1rem;
+  }
 }
 @media (max-width: 800px) {
   .font-1-xxl {
