Criação da página bicicletas.html

--- a/css/style.css
+++ b/css/style.css
@@ -16,4 +16,5 @@
 
 /* Páginas */
 @import "./bicicletas/bicicletas-lista.css";
+@import "./bicicletas/bicicletas.css";
 @import "./termos/termos.css";
