Criação da página seguros e ajuste do css que cria os ícones

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,11 @@
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
-@import "./home/seguros.css";
+
+/* seguros */
+@import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
