--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -1,15 +1,19 @@
 .seguros-bg {
   width: 100%;
-  background-color: var(--c11);
   box-sizing: border-box;
+  background-color: var(--c11);
 }
 .seguros {
   padding-top: 60px;
-  padding-bottom: 120px;
+  padding-bottom: 80px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: var(--gap-xl) var(--gap-xxl);
   align-items: center;
+}
+/* A regra abaixo valerá para utilizar na PÁGINA seguros */
+#seguros .seguros {
+  padding-top: 0;
 }
 .seguros h2 {
   grid-column: 1/-1;
@@ -52,6 +56,7 @@
   color: var(--p1);
   margin-right: var(--m-sm);
 }
+
 @media (max-width: 1000px) {
   .seguros {
     gap: var(--gap-xl) !important;
